Removed baseurl prefix to sources. Try to align content by center.

--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,10 @@ description: Работаем в различных стилях и направ
       <div class="clearfix">
         <div class="info">
           <div class="img">
-            <img ng-src="{{site.baseurl}}/img/about/[[groupPhoto]].jpg" alt="Общее фото артистов Feniks Dance Show">
+            <img ng-src="/img/about/[[groupPhoto]].jpg" alt="Общее фото артистов Feniks Dance Show">
           </div>
           <div class="denis">
-            <img src="{{site.baseurl}}/img/about/wh6A69pEi0o.jpg" alt="Хореограф Денис Сергеев">
+            <img src="/img/about/wh6A69pEi0o.jpg" alt="Хореограф Денис Сергеев">
             <p>Денис Сергеев</p>
           </div>
           <p>Мы работаем в различных стилях и направлениях современной хореографии, что делает наш коллектив УНИВЕРСАЛЬНЫМ!
@@ -57,8 +57,8 @@ description: Работаем в различных стилях и направ
           {% endif %}
           <div class="cell artist">
             <div class="wrapper">
-              <a href="{{site.baseurl}}{{artist.image}}" title="{{artist.name}}" class="box cboxElement">
-                <img src="{{site.baseurl}}{{artist.image}}" alt="{{artist.name}}">
+              <a href="{{artist.image}}" title="{{artist.name}}" class="box cboxElement">
+                <img src="{{artist.image}}" alt="{{artist.name}}">
               </a>
             </div>
             <div class="fio">
