--- a/box/index.html
+++ b/box/index.html
@@ -10,29 +10,29 @@ description: Новый пластический спектакль-модерн
   <div class="wrapper">
     <div class="content box">
       <div class="up">
-        <img src="{{site.baseurl}}/img/box/top-1.jpg" alt="танцевальный спектакль &quot;The Box&quot;"/>
-        <img src="{{site.baseurl}}/img/box/top-2.jpg" alt="премьера спектакля &quot;The Box&quot;"/>
-        <img src="{{site.baseurl}}/img/box/top-3.jpg" alt="танец"/>
-        <img src="{{site.baseurl}}/img/box/top-4.jpg" alt="модерн, коробка"/>
+        <img src="/img/box/top-1.jpg" alt="танцевальный спектакль &quot;The Box&quot;"/>
+        <img src="/img/box/top-2.jpg" alt="премьера спектакля &quot;The Box&quot;"/>
+        <img src="/img/box/top-3.jpg" alt="танец"/>
+        <img src="/img/box/top-4.jpg" alt="модерн, коробка"/>
       </div>
       <div class="wrapper">
         <div class="center">
-          <img src="{{site.baseurl}}/img/box/main.png" alt="спектакль-модерн &quot;The Box&quot;, хореограф Денис Сергеев"/>
+          <img src="/img/box/main.png" alt="спектакль-модерн &quot;The Box&quot;, хореограф Денис Сергеев"/>
         </div>
         <div class="right faces">
           <div class="up">
-            <img src="{{site.baseurl}}/img/box/face-right-top.jpg" alt="Оксана Стратулат"/>
+            <img src="/img/box/face-right-top.jpg" alt="Оксана Стратулат"/>
           </div>
           <div class="down">
-            <img src="{{site.baseurl}}/img/box/face-right-down.jpg" alt="Давид Степанян"/>
+            <img src="/img/box/face-right-down.jpg" alt="Давид Степанян"/>
           </div>
         </div>
         <div class="left faces">
           <div class="up">
-            <img src="{{site.baseurl}}/img/box/face-left-top.jpg" alt="Евгения Рогозкина"/>
+            <img src="/img/box/face-left-top.jpg" alt="Евгения Рогозкина"/>
           </div>
           <div class="down">
-            <img src="{{site.baseurl}}/img/box/face-left-down.jpg" alt="Владимир Ломачевский"/>
+            <img src="/img/box/face-left-down.jpg" alt="Владимир Ломачевский"/>
           </div>
         </div>
       </div>
