--- a/vk/index.html
+++ b/vk/index.html
@@ -96,7 +96,7 @@
           <input type="text" required="required" name="access_token" class="form-control" id="access_token" placeholder="access token...">
         </div>
         <p>
-          <a href="https://oauth.vk.com/authorize?client_id=3829680&scope=photos&redirect_uri=http://localhost:4000/vk/&display=page&v=5.21&response_type=token">
+          <a href="https://oauth.vk.com/authorize?client_id=4382748&scope=photos&redirect_uri=http://feniks-dance.ru/vk/&display=page&v=5.21&response_type=token">
             Link for authorization
           </a>
         </p>
